Changes to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,10 +21,7 @@
     <div>
         <div class="vid-wrapper">
             <div class="vid-overlay"></div>
-            <video autoplay muted loop>
-                <source src="{{ url_for('static', filename= 'assets/main.mp4' ) }}" type="video/mp4">
-                Your browser does not support HTML5 video.
-            </video>
+            <img src="{{ url_for('static', filename= 'assets/main.jpg' ) }}">
         </div>
     </div>
     <div class='title'>
